tests/error/builtin_function_error.bz
// error: mismatched pointer types '*int32' and '*uint32' in 'function __builtin_slice_from_ptrs'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
// note: in generic instantiation of 'function __builtin_slice_from_ptrs(begin: ?*int32, end: ?*uint32) -> <unresolved>'
// note: required from here
function main()
{
	let i = 0;
	let u = 0u;
	__builtin_slice_from_ptrs(&i, &u);
}
